--- a/gvb_admin/src/assets/css/iconfont.css
+++ b/gvb_admin/src/assets/css/iconfont.css
@@ -1,1 +1,1 @@
-@import url("https://at.alicdn.com/t/c/font_4710036_2typ7runq02.css?spm=a313x.manage_type_myprojects.i1.9.71e33a814qgbdy&file=font_4710036_2typ7runq02.css");
+@import url("https://at.alicdn.com/t/c/font_4710036_b9ggsb1qbl.css?spm=a313x.manage_type_myprojects.i1.9.71e33a81vGWaC2&file=font_4710036_b9ggsb1qbl.css");
