--- a/gvb_web/src/assets/css/iconfont.css
+++ b/gvb_web/src/assets/css/iconfont.css
@@ -1,1 +1,1 @@
-@import url("https://at.alicdn.com/t/c/font_4710036_c655f3u0nk.css?spm=a313x.manage_type_myprojects.i1.11.71e33a81XFCH1k&file=font_4710036_c655f3u0nk.css");
+@import url("https://at.alicdn.com/t/c/font_4710036_xsdj7ij1ck.css?spm=a313x.manage_type_myprojects.i1.9.71e33a814tB1TM&file=font_4710036_xsdj7ij1ck.css");
